--- a/.github/workflows/nignx.yml
+++ b/.github/workflows/nignx.yml
@@ -7,10 +7,28 @@ on:
 permissions:
     contents: write
 
+env:
+ # verbosity setting for Terraform logs
+ TF_LOG: INFO
+ # Credentials for deployment to AWS
+ AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+ AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
 jobs:
-    test:
-        runs-on: ubunntu-latest
+    terraform: 
+        name: deploy yo-nignix
+        runs-on: ubuntu-latest
         steps:
-            - name: print hello world
-              run: echo "Hello world"
-    
+            - name: Checkout the repository to the runner
+              uses: actions/checkout@v2
+        
+            - name: Setup Terraform with specified version on the runner
+              uses: hashicorp/setup-terraform@v2
+              with:
+                terraform_version: 1.9.3
+            
+            - name: Terraform init
+              run: terraform init -backend-config="bucket=$BUCKET_TF_STATE"
+            
+            - name: Terraform Apply
+              run: terraform apply -auto-approve
